# api-contract-tester

./: README.md  pyproject.toml
.github/workflows/: ci.yml
api_contract_tester/: __init__.py  assertions.py  cli.py  config_loader.py  diff.py  executor.py  exit_codes.py  models.py  reporter.py  snapshot.py  utils.py
docs/: execution-plan.md  prd.md
examples/: auth.yaml  users.yaml
tests/: test_assertions.py  test_cli.py  test_diff.py  test_executor.py  test_loader.py  test_reporter.py  test_snapshot.py  test_utils.py
tests/fixtures/: sample_suite.json  sample_suite.yaml
